data/derived/sp14/progs/unify/prog1683.ml.out
Characters 28-29:
  let _ = List.fold_right (+) 0 [1,2,3];;
                              ^
Error: This expression has type int but an expression was expected of type
         int list
